examples/test/testpolicy1802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1802
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key45: value11
      key49: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value12
      podSelector:
        matchLabels:
          key20: value33
          key19: value28
